--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.6.3",
     "serve-favicon": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/artisd/Simple-MVC-Example.git"
+  },
+  "bugs": {
+    "url": "https://github.com/artisd/Simple-MVC-Example/issues"
+  },
+  "homepage": "https://github.com/artisd/Simple-MVC-Example#readme"
 }
